--- a/sandbox/styleguide/source/styles/05-objects/_objects.containers.scss
+++ b/sandbox/styleguide/source/styles/05-objects/_objects.containers.scss
@@ -1,4 +1,5 @@
-$bp-layout--article: 55rem; //magic for bill murray image positioning
+// $bp-layout--article: 55rem; //magic for bill murray image positioning
+$bp-layout--article: 600px; //magic for bill murray image positioning
 $wrapper--max-width: map-get($breakpoints, xlarge);
 
 
