--- a/sandbox/styleguide/source/styles/06-components/_components.article.scss
+++ b/sandbox/styleguide/source/styles/06-components/_components.article.scss
@@ -67,7 +67,7 @@
       line-height: 1.45;
       letter-spacing: 0;
 
-      @include to(medium) {
+      @include respond-to(max medium) {
         @include font-size(large);
       }
     }
