--- a/sandbox/styleguide/source/styles/06-components/_components.headings.scss
+++ b/sandbox/styleguide/source/styles/06-components/_components.headings.scss
@@ -18,7 +18,7 @@
 
   letter-spacing: -.15rem;
 
-  @include to(medium) {
+  @include respond-to(max medium) {
     @include font-size(xxlarge);
 
     letter-spacing: -.1rem;
@@ -86,7 +86,7 @@
     line-height: 1.45;
     letter-spacing: 0;
 
-    @include to(medium) {
+    @include respond-to(max medium) {
       @include font-size(large);
     }
   }
