Fixed spacing bug with article aside and headings. (#92)
* WIP: stashing latest + testing new travis config

* WIP: switching travis version to trustee instead

* WIP: testing fix for travis php 7.1 install

* WIP: fixing add-apt-repository command so travis doesn't time out

* Update .travis.yml

* Adding npm init script

* Update package.json

* WIP: testing simplified config

* WIP: testing simplified config

* WIP: Typography setup

* WIP: adding working versions of PL and server build tasks to Bolt

* Update install-homebrew.sh

* Update package.json

* WIP: re-testing deploy scripts

* fix: adding .surgeignore to allow bower_components + revising deploy commands

* fix: Updating deploy script path

* fix: testing fix for PL gulp build w/ Travis

* fix: testing fix for surge.sh deploys to PL works

* WIP: testing slack notifications

* WIP: retesting with gulp task added

* WIP: responsive typography

* WIP: stashing latest progresson pattern lab and gulp work

* WIP: organization

* fix: testing yarn fix

* fix: retesting

* fix: retesting

* fix: re-adding apt-get update command -- trying to get yarn build for potential speed boost

* fix: retesting

* fix: retesting

* fix: Adding gulp global install

* WIP: testing removing hhvm

* WIP: updating travis build command so things don't hang when gulp build is run

* WIP: font weights and body size

* WIP: font-size map

* style: font-family, font-size, font-weight

* WIP: Adding minimal Jekyll site setup

* WIP: stashing latest. wrapping up initial batch of gulp tasks for release v0.1.0

* WIP: fixing live reload issues + syncing up internal task functions that call one-another relating to watch tasks

* refactor: adding working default gulp task to serve PL, compile CSS, and watch for changes

* WIP: bolt home page

* style: not so great non-system styles for home page only.

* WIP: working on build task testings prior to PR

*

--- a/sandbox/styleguide/source/styles/02-tools/_tools.spacing.scss
+++ b/sandbox/styleguide/source/styles/02-tools/_tools.spacing.scss
@@ -5,8 +5,8 @@
 @mixin clearfix {
   &:before,
   &:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+    content: " ";
+    display: table;
   }
 
   &:after {
@@ -15,8 +15,7 @@
 }
 
 @mixin paragraph-spacing {
-  @include margin(($font-leading--base + em),0,0,0);
-}
+  @include margin(($font-leading--base + rem),0,0,0);
 
 @mixin null-spacing {
   @include margin(0,0,0,0);
