--- a/sandbox/styleguide/source/styles/06-components/_components.headings.scss
+++ b/sandbox/styleguide/source/styles/06-components/_components.headings.scss
@@ -71,7 +71,7 @@
   }
 
 .c-heading-group {
-  .c-eyebrow {
+  .c-heading--eyebrow {
     @include padding(0,0,($font-leading--base*.125 + rem),0);
   }
 
