--- a/sandbox/styleguide/source/styles/05-objects/_objects.containers.scss
+++ b/sandbox/styleguide/source/styles/05-objects/_objects.containers.scss
@@ -84,18 +84,14 @@ body {
         @include null-spacing;
       }
     }
-
-    article {
+    
+    .c-article {
       @include margin(0,auto,0,auto);
 
       max-width: $article-line-length + ch;
 
       aside {
-        @include margin(($font-leading--base + rem),calc(#{$gutter*1.5 + rem} - #{$golden-aside-width + vw}),($font-leading--base + rem),($gutter + rem));
-
-        &:first-child {
-          margin-top: 0;
-        }
+        @include margin(0,calc(#{$gutter*1.5 + rem} - #{$golden-aside-width + vw}),($font-leading--base + rem),($gutter + rem));
       }
     }
   }
