fix: missing curly bracket

--- a/sandbox/styleguide/source/styles/02-tools/_tools.spacing.scss
+++ b/sandbox/styleguide/source/styles/02-tools/_tools.spacing.scss
@@ -16,6 +16,7 @@
 
 @mixin paragraph-spacing {
   @include margin(($font-leading--base + rem),0,0,0);
+}
 
 @mixin null-spacing {
   @include margin(0,0,0,0);
