--- a/sandbox/styleguide/source/styles/06-components/_components.article.scss
+++ b/sandbox/styleguide/source/styles/06-components/_components.article.scss
@@ -3,6 +3,20 @@
 
   line-height: $font-leading--base;
 
+  .inset {
+    @include inset(xxlarge);
+  }
+
+  .stack {
+    @include stack(medium);
+  }
+
+  .inline {
+    @include inline(xlarge);
+
+    background-color: red;
+  }
+
   strong {
     font-weight: $font-weight--semibold; // This is an edge case to use semibold.
   }
