--- a/sandbox/styleguide/source/styles/05-objects/_objects.containers.scss
+++ b/sandbox/styleguide/source/styles/05-objects/_objects.containers.scss
@@ -84,7 +84,7 @@ body {
         @include null-spacing;
       }
     }
-    
+
     .c-article {
       @include margin(0,auto,0,auto);
 
@@ -169,7 +169,7 @@ body {
   max-width: $wrapper--max-width;
 }
 
-.o-inset {
+/*.o-inset {
   @include padding(($font-leading--base + rem),($gutter + rem),($font-leading--base + rem),($gutter + rem));
 
   @include respond-to(medium) {
@@ -185,4 +185,86 @@ body {
 .o-inset--y {
   padding-right: 0;
   padding-left: 0;
+}*/
+
+.o-inset {
+  @include inset(medium);
+}
+
+.o-stack {
+  @include stack(medium);
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.o-inline-list {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.o-inline-list__item {
+  @include inline(medium);
+
+  &:last-child {
+    margin-left: 0;
+  }
+}
+
+.o-grid {
+  display: flex;
+  margin-right: -(h-spacing(small));
+  margin-left: -(h-spacing(small));
+}
+
+.o-grid__item {
+  flex: 1;
+  margin-right: h-spacing(small);
+  margin-left: h-spacing(small);
+}
+
+.c-card {
+  padding: 0;
+  border: 1px solid;
+  border-radius: .5rem;
+  overflow: hidden;
+}
+
+.c-card--flex {
+  display: flex;
+  flex-direction: column;
+}
+
+.c-card__media {
+  margin: 0 !important;
+  padding: 0 !important;
+
+  img {
+    display: block !important;
+    margin: 0 !important;
+    max-width: 100% !important;
+  }
+}
+
+.c-card__content {
+}
+
+.c-card__actions {
+  margin-top: auto;
+}
+
+
+.c-button {
+  @include inset(medium);
+
+  color: white !important;
+  text-align: center;
+  background-color: black;
+}
+
+.c-button--expand {
+  display: block;
 }
